# fakesid

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
android/: settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml  CMakeLists.txt
android/app/src/main/java/com/twobit/fakesid/: Activity.java  FileUtils.java  Lib.java  MainActivity.java  MainView.java  View.java
android/app/src/main/java/com/twobit/nativity/: Activity.java  Lib.java  View.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: demo1.sng  demo2.sng  help.md
docs/: RELEASE_NOTES_v3.0.md  privacy-policy.md  readme.md  reference.md  tutorial.md
docs/manual/: readme.md
docs/tut-00/: tutorial.md
docs/tut-01/: readme.md
src/: app.cpp  app.hpp  debug_renderer.hpp  edit.cpp  edit.hpp  foo.cpp  foo.hpp  gfx.cpp  gfx.hpp  gui.cpp  gui.hpp  instrument_effect_view.cpp  instrument_effect_view.hpp  jam_view.cpp  jam_view.hpp  main.cpp  player.cpp  player.hpp  project_view.cpp  project_view.hpp  render.cpp  render.hpp  renderer.hpp  settings.cpp  settings.hpp  sid_engine.cpp  sid_engine.hpp  song.cpp  song.hpp  song_v0.hpp  song_view.cpp  song_view.hpp  track_view.cpp  track_view.hpp
